target/generated-sources/antlr4/minijava/minijavaParser.java
// Generated from minijava.g4 by ANTLR 4.4

	package minijava;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

public class minijavaParser extends Parser {
	public static final int
		T__1=1, T__0=2, LBRACKET=3, RBRACKET=4, LBRACE=5, RBRACE=6, LCURLY=7, 
		RCURLY=8, SEMICOLON=9, COLON=10, DOT=11, CLASS=12, EXTENDS=13, PUBLIC=14, 
		STATIC=15, VOID=16, MAIN=17, INT=18, BOOLEAN=19, WHILE=20, IF=21, ELSE=22, 
		PRINT=23, NEW=24, THIS=25, RETURN=26, EQUAL_ASSIGN=27, AND=28, LESSTHAN=29, 
		PLUS=30, MINUS=31, TIMES=32, NOT=33, TRUE=34, FALSE=35, INTEGER_LITERAL=36, 
		IDENTIFIER=37, WS=38;
	public static final String[] tokenNames = {
		"<INVALID>", "'length'", "'String'", "'('", "')'", "'['", "']'", "'{'", 
		"'}'", "';'", "','", "'.'", "'class'", "'extends'", "'public'", "'static'", 
		"'void'", "'main'", "'int'", "'boolean'", "'while'", "'if'", "'else'", 
		"'System.out.println'", "'new'", "'this'", "'return'", "'='", "'&&'", 
		"'<'", "'+'", "'-'", "'*'", "'!'", "'true'", "'false'", "INTEGER_LITERAL", 
		"IDENTIFIER", "WS"
	};
	public static final int
		RULE_goal = 0, RULE_mainClass = 1, RULE_classDeclaration = 2, RULE_varDeclaration = 3, 
		RULE_methodDeclaration = 4, RULE_type = 5, RULE_statement = 6, RULE_expression = 7;
	public static final String[] ruleNames = {
		"goal", "mainClass", "classDeclaration", "varDeclaration", "methodDeclaration", 
		"type", "statement", "expression"
	};

	@Override
	public String getGrammarFileName() { return "minijava.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	public minijavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public static class GoalContext extends ParserRuleContext {
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
	 
		public GoalContext() { }
		public void copyFrom(GoalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgramContext extends GoalContext {
		public List<? extends ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public TerminalNode EOF() { return getToken(minijavaParser.EOF, 0); }
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public ProgramContext(GoalContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitProgram(this);
		}
	}

	@RuleVersion(0)
	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_goal);
		int _la;
		try {
			_localctx = new ProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(16); mainClass();
			setState(20);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(17); classDeclaration();
				}
				}
				setState(22);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(23); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
	 
		public MainClassContext() { }
		public void copyFrom(MainClassContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MainContext extends MainClassContext {
		public TerminalNode RBRACKET() { return getToken(minijavaParser.RBRACKET, 0); }
		public TerminalNode VOID(int i) {
			return getToken(minijavaParser.VOID, i);
		}
		public TerminalNode LBRACE() { return getToken(minijavaParser.LBRACE, 0); }
		public List<? extends TerminalNode> LCURLY() { return getTokens(minijavaParser.LCURLY); }
		public TerminalNode LBRACKET() { return getToken(minijavaParser.LBRACKET, 0); }
		public TerminalNode RBRACE() { return getToken(minijavaParser.RBRACE, 0); }
		public TerminalNode STATIC() { return getToken(minijavaParser.STATIC, 0); }
		public List<? extends TerminalNode> VOID() { return getTokens(minijavaParser.VOID); }
		public TerminalNode RCURLY() { return getToken(minijavaParser.RCURLY, 0); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(minijavaParser.IDENTIFIER, i);
		}
		public TerminalNode LCURLY(int i) {
			return getToken(minijavaParser.LCURLY, i);
		}
		public TerminalNode PUBLIC() { return getToken(minijavaParser.PUBLIC, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode CLASS() { return getToken(minijavaParser.CLASS, 0); }
		public List<? extends TerminalNode> IDENTIFIER() { return getTokens(minijavaParser.IDENTIFIER); }
		public MainContext(MainClassContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitMain(this);
		}
	}

	@RuleVersion(0)
	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainClass);
		try {
			_localctx = new MainContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(25); match(CLASS);
			setState(26); match(IDENTIFIER);
			setState(27); match(LCURLY);
			setState(28); match(PUBLIC);
			setState(29); match(STATIC);
			setState(30); match(VOID);
			setState(31); match(VOID);
			setState(32); match(LBRACKET);
			setState(33); match(T__0);
			setState(34); match(LBRACE);
			setState(35); match(RBRACE);
			setState(36); match(IDENTIFIER);
			setState(37); match(RBRACKET);
			setState(38); match(LCURLY);
			setState(39); statement();
			setState(40); match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
	 
		public ClassDeclarationContext() { }
		public void copyFrom(ClassDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ClassDeclContext extends ClassDeclarationContext {
		public List<? extends MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public List<? extends VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public TerminalNode RCURLY() { return getToken(minijavaParser.RCURLY, 0); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(minijavaParser.IDENTIFIER, i);
		}
		public TerminalNode LCURLY() { return getToken(minijavaParser.LCURLY, 0); }
		public TerminalNode CLASS() { return getToken(minijavaParser.CLASS, 0); }
		public List<? extends TerminalNode> IDENTIFIER() { return getTokens(minijavaParser.IDENTIFIER); }
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public TerminalNode EXTENDS() { return getToken(minijavaParser.EXTENDS, 0); }
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public ClassDeclContext(ClassDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitClassDecl(this);
		}
	}

	@RuleVersion(0)
	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDeclaration);
		int _la;
		try {
			_localctx = new ClassDeclContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(CLASS);
			setState(43); match(IDENTIFIER);
			setState(46);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(44); match(EXTENDS);
				setState(45); match(IDENTIFIER);
				}
			}

			setState(48); match(LCURLY);
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOLEAN) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(49); varDeclaration();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUBLIC) {
				{
				{
				setState(55); methodDeclaration();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61); match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
	 
		public VarDeclarationContext() { }
		public void copyFrom(VarDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarDeclContext extends VarDeclarationContext {
		public TerminalNode SEMICOLON() { return getToken(minijavaParser.SEMICOLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(minijavaParser.IDENTIFIER, 0); }
		public VarDeclContext(VarDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitVarDecl(this);
		}
	}

	@RuleVersion(0)
	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclaration);
		try {
			_localctx = new VarDeclContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(63); type();
			setState(64); match(IDENTIFIER);
			setState(65); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclarationContext extends ParserRuleContext {
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
	 
		public MethodDeclarationContext() { }
		public void copyFrom(MethodDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MethodDeclContext extends MethodDeclarationContext {
		public TerminalNode RBRACKET() { return getToken(minijavaParser.RBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(minijavaParser.SEMICOLON, 0); }
		public List<? extends VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<? extends TerminalNode> COLON() { return getTokens(minijavaParser.COLON); }
		public TerminalNode LCURLY() { return getToken(minijavaParser.LCURLY, 0); }
		public TerminalNode LBRACKET() { return getToken(minijavaParser.LBRACKET, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode RETURN() { return getToken(minijavaParser.RETURN, 0); }
		public TerminalNode COLON(int i) {
			return getToken(minijavaParser.COLON, i);
		}
		public TerminalNode RCURLY() { return getToken(minijavaParser.RCURLY, 0); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(minijavaParser.IDENTIFIER, i);
		}
		public TerminalNode PUBLIC() { return getToken(minijavaParser.PUBLIC, 0); }
		public List<? extends TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public List<? extends StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public List<? extends TerminalNode> IDENTIFIER() { return getTokens(minijavaParser.IDENTIFIER); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public MethodDeclContext(MethodDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitMethodDecl(this);
		}
	}

	@RuleVersion(0)
	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodDeclaration);
		int _la;
		try {
			int _alt;
			_localctx = new MethodDeclContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(67); match(PUBLIC);
			setState(68); type();
			setState(69); match(IDENTIFIER);
			setState(70); match(LBRACKET);
			setState(82);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOLEAN) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(71); type();
				setState(72); match(IDENTIFIER);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COLON) {
					{
					{
					setState(73); match(COLON);
					setState(74); type();
					setState(75); match(IDENTIFIER);
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(84); match(RBRACKET);
			setState(85); match(LCURLY);
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(86); varDeclaration();
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCURLY) | (1L << WHILE) | (1L << IF) | (1L << PRINT) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(92); statement();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98); match(RETURN);
			setState(99); expression(0);
			setState(100); match(SEMICOLON);
			setState(101); match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TypeIntArrayContext extends TypeContext {
		public TerminalNode RBRACE() { return getToken(minijavaParser.RBRACE, 0); }
		public TerminalNode LBRACE() { return getToken(minijavaParser.LBRACE, 0); }
		public TerminalNode INT() { return getToken(minijavaParser.INT, 0); }
		public TypeIntArrayContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterTypeIntArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitTypeIntArray(this);
		}
	}
	public static class TypeIntegerContext extends TypeContext {
		public TerminalNode INT() { return getToken(minijavaParser.INT, 0); }
		public TypeIntegerContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterTypeInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitTypeInteger(this);
		}
	}
	public static class TypeIdentifierContext extends TypeContext {
		public TerminalNode IDENTIFIER() { return getToken(minijavaParser.IDENTIFIER, 0); }
		public TypeIdentifierContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterTypeIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitTypeIdentifier(this);
		}
	}
	public static class TypeBooleanContext extends TypeContext {
		public TerminalNode BOOLEAN() { return getToken(minijavaParser.BOOLEAN, 0); }
		public TypeBooleanContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterTypeBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitTypeBoolean(this);
		}
	}

	@RuleVersion(0)
	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			setState(109);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new TypeIntArrayContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(103); match(INT);
				setState(104); match(LBRACE);
				setState(105); match(RBRACE);
				}
				break;

			case 2:
				_localctx = new TypeBooleanContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(106); match(BOOLEAN);
				}
				break;

			case 3:
				_localctx = new TypeIntegerContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(107); match(INT);
				}
				break;

			case 4:
				_localctx = new TypeIdentifierContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(108); match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StmWhileContext extends StatementContext {
		public TerminalNode RBRACKET() { return getToken(minijavaParser.RBRACKET, 0); }
		public TerminalNode LBRACKET() { return getToken(minijavaParser.LBRACKET, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(minijavaParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StmWhileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterStmWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitStmWhile(this);
		}
	}
	public static class StmArrayAssignContext extends StatementContext {
		public TerminalNode SEMICOLON() { return getToken(minijavaParser.SEMICOLON, 0); }
		public TerminalNode RBRACE() { return getToken(minijavaParser.RBRACE, 0); }
		public TerminalNode LBRACE() { return getToken(minijavaParser.LBRACE, 0); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode IDENTIFIER() { return getToken(minijavaParser.IDENTIFIER, 0); }
		public List<? extends ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode EQUAL_ASSIGN() { return getToken(minijavaParser.EQUAL_ASSIGN, 0); }
		public StmArrayAssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterStmArrayAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitStmArrayAssign(this);
		}
	}
	public static class StmIfContext extends StatementContext {
		public TerminalNode RBRACKET() { return getToken(minijavaParser.RBRACKET, 0); }
		public TerminalNode ELSE() { return getToken(minijavaParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(minijavaParser.IF, 0); }
		public TerminalNode LBRACKET() { return getToken(minijavaParser.LBRACKET, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<? extends StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StmIfContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterStmIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitStmIf(this);
		}
	}
	public static class StmPrintContext extends StatementContext {
		public TerminalNode RBRACKET() { return getToken(minijavaParser.RBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(minijavaParser.SEMICOLON, 0); }
		public TerminalNode PRINT() { return getToken(minijavaParser.PRINT, 0); }
		public TerminalNode LBRACKET() { return getToken(minijavaParser.LBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StmPrintContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterStmPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitStmPrint(this);
		}
	}
	public static class StmAssignContext extends StatementContext {
		public TerminalNode SEMICOLON() { return getToken(minijavaParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(minijavaParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EQUAL_ASSIGN() { return getToken(minijavaParser.EQUAL_ASSIGN, 0); }
		public StmAssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterStmAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitStmAssign(this);
		}
	}
	public static class StmBlockContext extends StatementContext {
		public TerminalNode RCURLY() { return getToken(minijavaParser.RCURLY, 0); }
		public TerminalNode LCURLY() { return getToken(minijavaParser.LCURLY, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<? extends StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StmBlockContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterStmBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitStmBlock(this);
		}
	}

	@RuleVersion(0)
	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		int _la;
		try {
			setState(152);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new StmBlockContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(111); match(LCURLY);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCURLY) | (1L << WHILE) | (1L << IF) | (1L << PRINT) | (1L << IDENTIFIER))) != 0)) {
					{
					{
					setState(112); statement();
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(118); match(RCURLY);
				}
				break;

			case 2:
				_localctx = new StmIfContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(119); match(IF);
				setState(120); match(LBRACKET);
				setState(121); expression(0);
				setState(122); match(RBRACKET);
				setState(123); statement();
				setState(124); match(ELSE);
				setState(125); statement();
				}
				break;

			case 3:
				_localctx = new StmWhileContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(127); match(WHILE);
				setState(128); match(LBRACKET);
				setState(129); expression(0);
				setState(130); match(RBRACKET);
				setState(131); statement();
				}
				break;

			case 4:
				_localctx = new StmPrintContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(133); match(PRINT);
				setState(134); match(LBRACKET);
				setState(135); expression(0);
				setState(136); match(RBRACKET);
				setState(137); match(SEMICOLON);
				}
				break;

			case 5:
				_localctx = new StmAssignContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(139); match(IDENTIFIER);
				setState(140); match(EQUAL_ASSIGN);
				setState(141); expression(0);
				setState(142); match(SEMICOLON);
				}
				break;

			case 6:
				_localctx = new StmArrayAssignContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(144); match(IDENTIFIER);
				setState(145); match(LBRACE);
				setState(146); expression(0);
				setState(147); match(RBRACE);
				setState(148); match(EQUAL_ASSIGN);
				setState(149); expression(0);
				setState(150); match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
